# databaseci

./: .gitignore  LICENSE.md  README.md  pyproject.toml
databaseci/: __init__.py  command.py  createdrop.py  curs.py  database.py  formatting.py  inserting.py  loading.py  notify.py  paging.py  psyco.py  rows.py  schemas.py  statements.py  tempdb.py  typeguess.py  urls.py  utils.py
